--- a/public/assets/css/game.css
+++ b/public/assets/css/game.css
@@ -19,3 +19,8 @@ table#game_board td{
 #messages p{
       margin:0px;
 }
+
+td.hovered_over:hover {
+      background:url('../images/hover.gif'), rgb(255,255,255);
+      background-size: 100% 100%;
+}
